--- a/.github/workflows/maven-build-pr.yml
+++ b/.github/workflows/maven-build-pr.yml
@@ -1,16 +1,14 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven and staging
+name: Maven build Pull-Request
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+  maven-build-pr:
 
     runs-on: ubuntu-latest
     timeout-minutes: 15
