[Build] remove maven-assembly-plugin executions from pluginManagment
PLugin executions specified in the build->pluginManagment section do not
run (only those in the build->plugins section) and therefore can be
removed.

--- a/symja_android_library/matheclipse-discord/pom.xml
+++ b/symja_android_library/matheclipse-discord/pom.xml
@@ -58,22 +58,13 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>Class>org.matheclipse.discord.SymjaBot</mainClass>
+								<mainClass>org.matheclipse.discord.SymjaBot</mainClass>
 							</manifest>
 						</archive>
 						<descriptorRefs>
 							<descriptorRef>jar-with-dependencies</descriptorRef>
 						</descriptorRefs>
 					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id> <!-- this is used for inheritance merges -->
-							<goals>
-								<goal>single</goal>
-							</goals>
-							<phase>package</phase> <!-- bind to the packaging phase -->
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
