--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -468,7 +468,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M5</version>
+					<version>2.12.4</version>
 				</plugin>
 
 				<plugin>
