--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -16,7 +16,7 @@
 	<licenses>
 		<license>
 			<name>GNU General Public License, Version 3</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
 			<distribution>repo</distribution>
 			<comments>A free, copyleft license for software and other kinds of works</comments>
 		</license>
