--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -39,7 +39,7 @@
 
 		<!-- Internal modules (not deployed).
 		Must not be last to not break deployment entirely.
-		See description of ''skipNexusStagingDeployMojo' in 
+		See description of 'skipNexusStagingDeployMojo' in 
 		https://github.com/sonatype/nexus-maven-plugins/blob/master/staging/maven-plugin/README.md#plugin-flags-->
 		<module>matheclipse-beakerx</module>
 		<module>matheclipse-jar</module>
@@ -270,7 +270,7 @@
 				<artifactId>hipparchus-ode</artifactId>
 				<version>2.0</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
@@ -281,7 +281,7 @@
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht-io</artifactId>
 				<version>1.5.1</version>
-			</dependency> 
+			</dependency>
 
 			<dependency>
 				<groupId>org.jsoup</groupId>
@@ -438,7 +438,11 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>3.0.0-M5</version>
 					<configuration>
-						<tagNameFormat>@{project.version}</tagNameFormat>
+						<tagNameFormat>v@{project.version}</tagNameFormat>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
+						<useReleaseProfile>false</useReleaseProfile>
+						<releaseProfiles>publish-to-maven-central</releaseProfiles>
+						<arguments>-Drelease.build=true</arguments>
 					</configuration>
 				</plugin>
 
@@ -632,6 +636,7 @@
 						<extensions>true</extensions>
 						<configuration>
 							<skipNexusStagingDeployMojo>${deployment.suppress}</skipNexusStagingDeployMojo>
+							<!-- Documentation: https://github.com/sonatype/nexus-maven-plugins/blob/master/staging/maven-plugin/README.md-->
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
