--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,21 +13,20 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adopt'
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2 
-    - run: mvn --batch-mode --update-snapshots verify --file symja_android_library/pom.xml
+        distribution: 'temurin'
+        cache: 'maven' # Cache Maven dependencies between workflow runs
+
+    - run: mvn -f symja_android_library -B -U verify
+
     - uses: actions/upload-artifact@v2
       with:
         name: Package
