--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -467,7 +467,6 @@
 					<groupId>org.sonatype.plugins</groupId>
 					<artifactId>nexus-staging-maven-plugin</artifactId>
 					<version>1.6.8</version>
-					<extensions>true</extensions>
 					<configuration>
 						<serverId>ossrh</serverId>
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
@@ -549,13 +548,6 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
-								<configuration>
-									<!-- Prevent gpg from using pinentry programs. Otherwise build fails on GitHub-->
-									<gpgArguments>
-										<arg>--pinentry-mode</arg>
-										<arg>loopback</arg>
-									</gpgArguments>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -563,8 +555,10 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<extensions>true</extensions>
 						<configuration>
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+							<skipStagingRepositoryClose>true</skipStagingRepositoryClose>
 						</configuration>
 					</plugin>
 
