--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -72,6 +72,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+		<release.build>false</release.build>
 	</properties>
 
 	<dependencyManagement>
@@ -376,13 +377,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>3.0.0</version>
-					<configuration>
-						<rules>
-							<requireMavenVersion>
-								<version>3.2.0</version>
-							</requireMavenVersion>
-						</rules>
-					</configuration>
 				</plugin>
 
 				<plugin>
@@ -491,10 +485,32 @@
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>enforce-maven-version</id>
+						<id>enforce-common-build-rules</id>
 						<goals>
 							<goal>enforce</goal>
 						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>3.2.0</version>
+								</requireMavenVersion>
+								<banDuplicatePomDependencyVersions />
+							</rules>
+						</configuration>
+					</execution>
+					<execution>
+						<id>enforce-snapshot-version</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<skip>${release.build}</skip>
+							<rules>
+								<requireSnapshotVersion>
+									<message>Release versions only permitted for releases!</message>
+								</requireSnapshotVersion>
+							</rules>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
