--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -43,6 +43,7 @@
 		https://github.com/sonatype/nexus-maven-plugins/blob/master/staging/maven-plugin/README.md#plugin-flags-->
 		<module>matheclipse-beakerx</module>
 		<module>matheclipse-jar</module>
+		<module>tools</module>
 
 		<!-- Deployed modules -->
 		<module>matheclipse-external</module>
