[Build] disable deployment instead of excluding modules
Skipp deployment for internal modules and build them first to not skip
deployment of all modules.

This effectively reverts 1f70f4b3195705147dec2efcb4d40b62f0a97cc6 and
a9d3d70fde2d5ceddf1457ba2493417f181772ab.

--- a/symja_android_library/matheclipse-beakerx/pom.xml
+++ b/symja_android_library/matheclipse-beakerx/pom.xml
@@ -22,6 +22,11 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<!-- This project is not intended to be published -->
+		<deployment.suppress>true</deployment.suppress>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
