--- a/symja_android_library/matheclipse-jar/pom.xml
+++ b/symja_android_library/matheclipse-jar/pom.xml
@@ -22,6 +22,11 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<!-- This project is not intended to be published -->
+		<deployment.suppress>true</deployment.suppress>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
