Clean-up and simplify build configuration and workflows
Remove effectively unused 'exact-target-jdk' profile. The workflow run
with only Java-17 and do not install Java-11. Instead the compiler is
instructed to target the 11 release using the '-release' option.

--- a/.github/actions/setup-java-for-deployment/action.yml
+++ b/.github/actions/setup-java-for-deployment/action.yml
@@ -9,11 +9,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up JDK 17 for Maven Central Repository deployment
+    - name: Set up JDK for Maven Central Repository deployment
       uses: actions/setup-java@v4
       with:
         # Also generates a corresponding Maven toolchains.xml
-        java-version: '17.0.17'
+        java-version: '17'
         distribution: 'temurin'
         cache: 'maven' # Cache Maven dependencies between workflow runs
         # Properties for deployment to OSSRH:
