--- a/.github/workflows/maven-build-pr.yml
+++ b/.github/workflows/maven-build-pr.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  MAVEN_ARGS: --batch-mode --no-transfer-progress
+
 jobs:
   maven-build-pr:
     runs-on: ubuntu-latest
@@ -18,7 +21,8 @@ jobs:
     - name: Set up Java
       uses: ./.github/actions/setup-java-for-deployment
 
-    - run: mvn -f symja_android_library -B -U -Pexact-target-jdk verify
+    - run: mvn verify
+      working-directory: symja_android_library
 
     - uses: actions/upload-artifact@v6
       with:
